# racing-bank

./: .gitatributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  RACE_CONDITIONS.md  README.md  SECURITY.md  setup.sh
.github/workflows/: android-build.yml
api/: Dockerfile  Dockerfile.staged-uv  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
api/src/: __init__.py  auth.py  config.py  database.py  main.py  schemas.py
api/src/routes/: account_routes.py  auth_routes.py  fund_routes.py  transfer_routes.py
app/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  styles.xml
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/res/color/: bottom_nav_color.xml
app/app/src/main/res/drawable/: code_input_background.xml  gradient_background.xml  ic_arrow_right.xml  ic_dashboard.xml  ic_empty_statement.xml  ic_fingerprint.xml  ic_invest.xml  ic_launcher_foreground.xml  ic_money.xml  ic_notifications.xml  ic_race_car.xml  ic_security.xml  ic_sound.xml  ic_statement.xml  ic_transfer.xml  ic_vibrate.xml  retro_progress.xml  splash_background.xml
app/app/src/main/res/layout/: activity_auth.xml  activity_main.xml  activity_qr_scanner.xml  activity_splash.xml  dialog_invest.xml  dialog_redeem.xml  fragment_dashboard.xml  fragment_investment.xml  fragment_login.xml  fragment_register.xml  fragment_settings.xml  fragment_statement.xml  fragment_transfer.xml  fragment_two_factor.xml  item_transaction.xml  item_transfer.xml
app/app/src/main/res/menu/: main_menu.xml  (+1 more)
(+30 files in other folders)
