[project]
name = "bankao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "pydantic>=2.12.4",
    "pydantic-core>=2.41.5",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
